bugs/flair-icon-alignment

--- a/src/main/webapp/content/css/main.css
+++ b/src/main/webapp/content/css/main.css
@@ -1185,17 +1185,19 @@ nav.navbar-static-top {
       vertical-align: bottom;
       width: 25px;
       height: 20px;
-      fill: #404345; }
+      fill: #404345;
+      margin-right: -9px; }
     nav.navbar-static-top .navbar-header .logo {
       position: absolute;
       top: 0px;
       left: 0px;
       border-right: 1px #ced0d1 solid;
-      height: 30px; }
+      height: 41px;
+      width: 37px; }
       nav.navbar-static-top .navbar-header .logo img {
         width: 25px;
-        height: 36px;
-        margin-right: 5px; }
+        height: 40px;
+        margin-left: 6px; }
     nav.navbar-static-top .navbar-header .home-row {
       display: flex;
       align-items: center; }
@@ -1204,7 +1206,8 @@ nav.navbar-static-top {
       position: absolute;
       outline: none;
       -webkit-transition: all 1s ease;
-      transition: all 1s ease; }
+      transition: all 1s ease;
+      margin-right: -18px; }
     nav.navbar-static-top .navbar-header .search-right-icon-active {
       left: 62px; }
   nav.navbar-static-top user-profile-component .dropdown-menu {
@@ -4089,21 +4092,12 @@ jhi-alert .alerts .alert-danger {
     .flairbi-content-header .header-first .view-name {
       margin-left: 11px; }
     .flairbi-content-header .header-first .logo {
-      width: 30px;
-      margin-left: 5px;
-      margin-left: 5px;
-      display: flex;
-      align-items: center;
-      height: 40px; }
+      width: 31px;
+      height: 40px;
+      border-right: 1px #ced0d1 solid; }
       .flairbi-content-header .header-first .logo img {
         width: 25px;
         height: 40px; }
-    .flairbi-content-header .header-first .line {
-      width: 1px;
-      height: 35px;
-      background: #e4e4e4;
-      float: left;
-      margin: 4px 5px 0 5px; }
   .flairbi-content-header h2 {
     margin: 0px;
     line-height: 40px;
@@ -4215,22 +4209,18 @@ jhi-alert .alerts .alert-danger {
       display: flex;
       align-items: flex-start;
       justify-content: flex-start; }
-      .flairbi-content-header .full-screen-topbar .full-screen-options .line {
-        width: 1px;
-        height: 39px;
-        background: #e4e4e4;
-        float: left;
-        margin: 4px 5px 0 5px; }
       .flairbi-content-header .full-screen-topbar .full-screen-options .logo {
-        width: 30px;
+        width: 45px;
         margin-left: 5px;
         margin-left: 5px;
         display: flex;
         align-items: center;
-        height: 40px; }
+        height: 40px;
+        border-right: 1px #ced0d1 solid; }
         .flairbi-content-header .full-screen-topbar .full-screen-options .logo img {
           width: 25px;
-          height: 40px; }
+          height: 40px;
+          margin-left: 7px; }
       .flairbi-content-header .full-screen-topbar .full-screen-options .dropdown-options-v5 {
         margin-left: 0px;
         padding-top: 0px; }
@@ -4262,7 +4252,7 @@ jhi-alert .alerts .alert-danger {
       .flairbi-content-header .full-screen-topbar .full-screen-options .add-bookmark {
         margin-right: 9px; }
       .flairbi-content-header .full-screen-topbar .full-screen-options menu-component .menu-container .menu {
-        margin-right: 12px; }
+        margin-right: 15px; }
       .flairbi-content-header .full-screen-topbar .full-screen-options .fs-btn svg {
         width: 38px;
         height: 35px;
