--- a/src/main/webapp/content/scss/partials/_flair-bi-content-header.scss
+++ b/src/main/webapp/content/scss/partials/_flair-bi-content-header.scss
@@ -55,24 +55,14 @@
             margin-left: 11px;
         }
         .logo {
-            width: 30px;
-            margin-left: 5px;
-            margin-left: 5px;
-            display: flex;
-            align-items: center;
+            width: 31px;
             height: 40px;
+            border-right: 1px #ced0d1 solid;
             img {
                 width: 25px;
                 height: 40px;
             }
         }
-        .line{
-                width: 1px;
-                height: 35px;
-                background: #e4e4e4;
-                float: left;
-                margin: 4px 5px 0 5px;
-            }
     }
     h2 {
         margin: 0px;
@@ -246,23 +236,18 @@
             //padding: 0 10px;
             align-items: flex-start;
             justify-content: flex-start;
-            .line{
-                width: 1px;
-                height: 39px;
-                background: #e4e4e4;
-                float: left;
-                margin: 4px 5px 0 5px;
-            }
             .logo {
-                width: 30px;
+                width: 45px;
             margin-left: 5px;
             margin-left: 5px;
             display: flex;
             align-items: center;
             height: 40px;
+            border-right: 1px #ced0d1 solid;
             img {
                 width: 25px;
                 height: 40px;
+                margin-left: 7px;
             }
                 
             }
@@ -312,7 +297,7 @@
             }
             menu-component {
                .menu-container .menu {
-                    margin-right: 12px;
+                    margin-right: 15px;
                 }
             }
             .fs-btn {
